@@ -1,11 +1,22 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Device-SNP
-version:      1.2
-version_from: Device/SNP.pm
-installdirs:  site
+---
+abstract: unknown
+author:
+  - 'Mike McCauley <mikem@airspayce.com>'
+build_requires:
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120630'
+license: unknown
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Device-SNP
+no_index:
+  directory:
+    - t
+    - inc
 requires:
-    Device::SerialPort:            1.002
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+  Device::SerialPort: 1.002
+version: 1.3
