@@ -4,9 +4,13 @@ Revision history for Perl extension Device::SNP
     - Initial release
 
 1.1 2006-06-05
-    - Added command line args to datpanle.pl to control the port to use,
+    - Added command line args to datpanel.pl to control the port to use,
     enable debug, usage message etc.
 
 1.2 2006-06-05
     - Added this Changes file to the distribution
     - Added documentation to SNP.pm
+
+? 
+    - Added -b flag to datapanel.pl to force byte-swapping for some
+    type of datapanel, notably DP30 when fetching Text types.
